fix link to Dartmouth Atlas in project description

--- a/geog323/portfolio/gravity/assets/index.html
+++ b/geog323/portfolio/gravity/assets/index.html
@@ -300,7 +300,7 @@
                 abstract.show = function () {
                     this._div.classList.remove("abstract");
                     this._div.classList.add("abstractUncollapsed");
-                    this._div.innerHTML = 'This map overlays hospital catchment areas developed using my QGIS model for the gravity model of spatial interaction with the HSAs (hospital service areas) from the Dartmouth Atlas (https://atlasdata.dartmouth.edu/downloads/supplemental#boundaries) for the Northeast region of the U.S.';
+                    this._div.innerHTML = 'This map overlays hospital catchment areas developed using my QGIS model for the gravity model of spatial interaction with the HSAs (hospital service areas) from the <a href="https://atlasdata.dartmouth.edu/downloads/supplemental#boundaries" target="_blank">Dartmouth Atlas</a> for the Northeast region of the U.S.';
             };
             abstract.addTo(map);
         var baseMaps = {};
